<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiLocator</string>
    <string name="menu_settings">Settings</string>
    <string name="WiFiInformation">WiFi Information</string>
    <string name="FindPlace">Find Place</string>
    <string name="About">About</string>
    <string name="OK">OK</string>
    <string name="HintText">Enter your password</string>
    <string name="sScan">Scan</string>
    <string name="status">WiFi Locator Demo</string>
    <string name="ChangePassword">Change Password</string>
	<string name="StartFind">Start</string>
	<string name="AddPlace">Add Place</string>
	<string name="CancelAddPlace">Cancel</string>
	<string name="Import">Import</string>
	<string name="Export">Export</string>
	<color name="red">#ffff0000</color>
	<string name="Guide">Guide</string>
	<string name="Guide1">Security:</string>
	<string name="Guide2">       Default password is null, user can change by button "Change Password"</string>
	<string name="Guide3">WiFi Information: </string>
	<string name="Guide4">       Show the WiFi information which your device found</string>
	<string name="Guide5">Find Place: show the position</string>
	<string name="Guide6">       - Scan to show the position by button "Scan"</string>
	<string name="Guide7">       - If the position does not find, you can add place by button "Add Place"</string>
	<string name="Guide8">       - Import the position from database by button "Import"</string>
	<string name="Guide9">       - Export the position to database by button "Export</string>
	<string name="Local">Local</string>
	<string name="Global">Global</string>
	
</resources>