<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/findplace"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btStartFind"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="18dp"
        android:onClick="onClickStartFind"
        android:text="@string/StartFind" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Guide" />

    <TextView
        android:id="@+id/tvPlace1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btStartFind"
        android:layout_below="@+id/btStartFind"
        android:layout_marginTop="116dp"
        android:text="@string/Global" />

    <TextView
        android:id="@+id/tvPlace2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btStartFind"
        android:layout_below="@+id/btStartFind"
        android:layout_marginTop="196dp"
        android:text="@string/Local" />
    
    <Button
        android:id="@+id/btAddPlace"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btStartFind"
        android:layout_below="@+id/btStartFind"
        android:layout_marginTop="25dp"
        android:onClick="onClickAddPlace"
        android:text="@string/AddPlace" />

    <Button
        android:id="@+id/btExport"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btStartFind"
        android:layout_alignBottom="@+id/btStartFind"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:onClick="onClickExport"
        android:text="@string/Export" />

    <Button
        android:id="@+id/btImport"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btAddPlace"
        android:layout_alignBottom="@+id/btAddPlace"
        android:layout_alignRight="@+id/btExport"
        android:onClick="onClickImport"
        android:text="@string/Import" />

    <TextView
        android:id="@+id/tvGlobalPlace"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPlace1"
        android:layout_alignBottom="@+id/tvPlace1"
        android:layout_centerHorizontal="true"
        android:text="" />

    <TextView
        android:id="@+id/tvLocalPlace"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPlace2"
        android:layout_alignBottom="@+id/tvPlace2"
        android:layout_alignLeft="@+id/tvGlobalPlace"
        android:text="" />

</RelativeLayout>